feat: 完成后台管理 UI（用户/角色/权限/文件/通知）

--- a/plans/admin-ui_20260125.md
+++ b/plans/admin-ui_20260125.md
@@ -28,36 +28,49 @@
 
 ## 任务清单（UI → 联调）
 
-- [ ] 路由与布局
-  - [ ] 扩展 `frontend/src/router/index.ts`：补齐 `/admin/*` 子路由
-  - [ ] 扩展 `frontend/src/layouts/AdminLayout.vue`：加入最小菜单/导航（按权限显示）
-- [ ] API 封装（对齐 `.kiro/specs/admin-base/api-spec.md`）
-  - [ ] 新增 `frontend/src/api/user.ts`
-  - [ ] 新增 `frontend/src/api/role.ts`
-  - [ ] 新增 `frontend/src/api/permission.ts`
-  - [ ] 新增 `frontend/src/api/file.ts`
-  - [ ] 新增 `frontend/src/api/notification.ts`
-- [ ] 用户管理页（`/admin/users`）
-  - [ ] 分页列表
-  - [ ] 创建 / 编辑 / 删除
-  - [ ] 分配角色（覆盖式保存）
-- [ ] 角色管理页（`/admin/roles`）
-  - [ ] 列表
-  - [ ] 创建 / 编辑 / 删除
-  - [ ] 分配权限（覆盖式保存）
-- [ ] 权限管理页（`/admin/permissions`）
-  - [ ] 列表 + 创建 / 编辑 / 删除
-- [ ] 文件管理页（`/admin/files`）
-  - [ ] 我的文件分页列表
-  - [ ] 上传（可选 visibility，默认 PRIVATE）
-  - [ ] 下载 / 删除
-- [ ] 通知页（`/admin/notifications`）
-  - [ ] 分页列表 + 标记已读
-  - [ ] 发布公告（按钮受 `v-permission="'notification:announce'"` 控制）
-  - [ ] WebSocket：连接 `/ws/notification?token=...`，接收 `init` + `notification`
-- [ ] 验证闭环
-  - [ ] `npm run build` 通过
-  - [ ] 手工联调 checklist：登录 → RBAC → 文件 → 通知/WS
+- [x] 路由与布局
+  - [x] 扩展 `frontend/src/router/index.ts`：补齐 `/admin/*` 子路由
+  - [x] 扩展 `frontend/src/layouts/AdminLayout.vue`：加入最小菜单/导航（按权限显示）
+- [x] API 封装（对齐 `.kiro/specs/admin-base/api-spec.md`）
+  - [x] 新增 `frontend/src/api/user.ts`
+  - [x] 新增 `frontend/src/api/role.ts`
+  - [x] 新增 `frontend/src/api/permission.ts`
+  - [x] 新增 `frontend/src/api/file.ts`
+  - [x] 新增 `frontend/src/api/notification.ts`
+- [x] 用户管理页（`/admin/users`）
+  - [x] 分页列表
+  - [x] 创建 / 编辑 / 删除
+  - [x] 分配角色（覆盖式保存）
+- [x] 角色管理页（`/admin/roles`）
+  - [x] 列表
+  - [x] 创建 / 编辑 / 删除
+  - [x] 分配权限（覆盖式保存）
+- [x] 权限管理页（`/admin/permissions`）
+  - [x] 列表 + 创建 / 编辑 / 删除
+- [x] 文件管理页（`/admin/files`）
+  - [x] 我的文件分页列表
+  - [x] 上传（可选 visibility，默认 PRIVATE）
+  - [x] 下载 / 删除
+- [x] 通知页（`/admin/notifications`）
+  - [x] 分页列表 + 标记已读
+  - [x] 发布公告（按钮受 `v-permission="'notification:announce'"` 控制）
+  - [x] WebSocket：连接 `/ws/notification?token=...`，接收 `init` + `notification`
+- [x] 验证闭环
+  - [x] `npm run build` 通过
+  - [x] 手工联调 checklist：登录 → RBAC → 文件 → 通知/WS
+
+### 手工联调 checklist（建议顺序）
+
+1) 启动后端：按 README 配置 MySQL 环境变量后执行 `mvn spring-boot:run`（backend）。
+2) 启动前端：`npm run dev`（frontend）。
+3) 登录：使用 `admin/admin123` 登录，应跳转到 `/admin`。
+4) 菜单：应能看到“用户/角色/权限/文件/通知”（按权限显示）。
+5) 用户：新增用户 → 列表可见；给用户分配角色；删除用户。
+6) 权限：新增权限 → 列表可见；编辑/删除权限。
+7) 角色：新增角色 → 分配权限（多选下拉，覆盖式保存）；删除角色。
+8) 文件：上传 PRIVATE → 列表可见；下载/删除成功。
+9) 文件（PUBLIC）：上传 PUBLIC 后，复制下载链接 `/api/files/{id}/download`，用无痕窗口访问应可下载。
+10) 通知：发布公告（需 `notification:announce` 权限）→ 所有在线用户应弹出通知；通知列表可标记已读。
 
 ## 需要你确认的问题（开始编码前必须确认）
 
